--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -33,7 +33,7 @@
 
 
     <EditText
-        android:id="@+id/registerEmail"
+        android:id="@+id/registerEmailEditText"
         android:layout_width="274dp"
         android:layout_height="46dp"
         android:layout_marginBottom="328dp"
@@ -77,7 +77,7 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/registrationButton"
+        android:id="@+id/profileRegisterButton"
         android:layout_width="264dp"
         android:layout_height="47dp"
         android:layout_marginBottom="4dp"
@@ -91,16 +91,18 @@
         app:layout_constraintVertical_bias="0.443" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="268dp"
-        android:layout_height="42dp"
+        android:id="@+id/checkPasswordEditText"
+        android:layout_width="276dp"
+        android:layout_height="44dp"
         android:layout_marginBottom="25dp"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="Repeat Password"
-        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/profileRegisterButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
