--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,104 +5,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistrationActivity"
-    android:background="@color/black">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/back2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent=".27"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0" />
-
-
-    <ImageView
-        android:layout_width="302dp"
-        android:layout_height="603dp"
-        android:src="@drawable/yellowback"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+    android:background="@drawable/registerbackground">
 
 
     <EditText
-        android:id="@+id/registerEmailEditText"
-        android:layout_width="274dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="328dp"
+        android:id="@+id/regActivityMail"
+        android:layout_width="255dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="266dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginRight="82dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/backgroundedittext"
         android:ems="10"
-        android:hint="Enter your E-mail here"
-        android:textColor="@color/black"
-
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/registerPasswordEdit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/registerPasswordEditText"
-        android:layout_width="274dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="276dp"
+        android:id="@+id/registerPasswordEdit"
+        android:layout_width="255dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginRight="82dp"
+        android:layout_marginBottom="38dp"
+        android:background="@drawable/backgroundedittext"
         android:ems="10"
-        android:textColor="@color/black"
-
-        android:hint="Enter your password here"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/checkPasswordEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="191dp"
-        android:layout_height="217dp"
-        android:layout_marginBottom="96dp"
-        android:src="@drawable/welcome"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.406" />
-
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/profileRegisterButton"
-        android:layout_width="264dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/signup"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText"
-        app:layout_constraintVertical_bias="0.443" />
+        app:layout_constraintTop_toBottomOf="@+id/regActivityMail" />
 
     <EditText
         android:id="@+id/checkPasswordEditText"
-        android:layout_width="276dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="25dp"
+        android:layout_width="255dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="74dp"
+        android:layout_marginLeft="74dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginRight="82dp"
+        android:layout_marginBottom="39dp"
+        android:background="@drawable/backgroundedittext"
         android:ems="10"
-        android:hint="Repeat Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/profileRegisterButton"
+        app:layout_constraintBottom_toTopOf="@+id/profileSignUpButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEdit" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/profileSignUpButton"
+        android:layout_width="139dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginLeft="59dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="162dp"
+        android:background="@drawable/registerlogin"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/profileRegisterButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkPasswordEditText" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/profileRegisterButton"
+        android:layout_width="139dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginRight="54dp"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/registersignup"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profileSignUpButton"
+        app:layout_constraintTop_toBottomOf="@+id/checkPasswordEditText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
