--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/homepage">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/appCompatButton2"
+        android:id="@+id/postButton"
         android:layout_width="191dp"
         android:layout_height="62dp"
         android:layout_marginStart="195dp"
@@ -29,19 +29,20 @@
         android:layout_height="127dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="48dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/appCompatButton2"
+        android:hint="type here"
+        app:layout_constraintBottom_toTopOf="@+id/postButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle"
         android:layout_width="411dp"
         android:layout_height="405dp"
         android:layout_marginTop="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/postButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
